test/bad/classes/super05.px

func f() def
    super()

f()
